<resources>
    <string name="app_name">MentalHealthTracker</string>
    <string name="action_settings">Settings</string>
    <string name="welcomeMessage_1">Good morning!</string>
    <string name="welcomeMessage_2">Good afternoon!</string>
    <string name="welcomeMessage_3">Good evening!</string>
    <string name="getStarted">Lets Get Started</string>
    <string name="yoga">Yoga</string>
    <string name="yogaDescription">A guided Yoga routine to calm the mind and improve flexibility</string>
    <string name="playmusic">Play Music</string>
    <string name="musicDescription">Listen to relaxing music</string>
    <string name="moodtracker">Mood Tracker</string>
    <string name="moodtrackerDescription">Track your mood, energy, social meter, and productivity</string>
    <string name="breathingexercises">Breathing Exercises</string>
    <string name="breathingexercisesDescription">Guided breathing exercises to help relieve stress</string>
    <string name="mindfulness">Mindfulness</string>
    <string name="mindfulnessDescription">Improve your mental concentration and awareness</string>
    <string name="exercises">Exercises</string>
    <string name="exercisesDescription">Guided exercises to improve strength and fitness</string>
    <string name="moreresources">More Resources</string>
    <string name="moreresourcesDescription">Access additional activities and resources</string>
    <string name="websupportarticles">Web Support Articles</string>
    <string name="websupportarticlesDescription">A collection of articles on improving mental health and controlling emotions</string>
    <string name="meditation">Meditation</string>
    <string name="meditationDescription">A guided meditation routine to improve the mind, heart, and body</string>
    <string name="counsellors">Connect with Counsellors</string>
    <string name="counsellorsDescription">Information on and hotlines to connect with mental health services and counsellors</string>
    <string name="statistics">Statistics</string>
    <string name="statisticsDescription">View usage statistics on app resources</string>
    <string name="favourites">Favourite Resources</string>
    <string name="favourites1">Favourite 1</string>
    <string name="favourites2">Favourite 2</string>
    <string name="favourites3">Favourite 3</string>
    <string name="editFav">Edit Favourites</string>
    <string name="confirmFavs">Confirm Favourites</string>
    <string name="selectFavourite1">Select Favourite 1</string>
    <string name="selectFavourite2">Select Favourite 2</string>
    <string name="selectFavourite3">Select Favourite 3</string>
    <string name="cancelSelection">Cancel Selection</string>
    <string name="confirmSelection">Confirm Selection</string>
    <string name="yogaPageTitle">YOGA</string>
    <string name="yogaCompletionMessage">GREAT JOB!</string>
    <string name="yogaBeginText">START</string>
    <string name="yogaInitialTimer">0:45</string>
    <string name="yogaStartButtonText">Start</string>
    <string name="yogaHeaderText">YOGA</string>
    <string name="yogaGetReadyText">Get Ready!</string>
    <string name="yogaImageContentDescription">Yoga Image Content Description</string>
    <string name="yogaRestartButtonText">Restart</string>
    <string name="currentlyPlayingThumbnail">currentlyPlayingThumbnail</string>
    <string name="currentlyPlayingTitle">Song Title</string>
    <string name="songMeta">Song Meta</string>
    <string name="miniplayerPlayButton">MiniPlayer Play Button</string>
    <string name="miniplayerSkipButton">MiniPlayer Skip Button</string>
    <string name="music_search_button">Search Music</string>
    <string name="shuffle_music">Shuffle Music</string>
    <string name="songListHeaderTemplate">Line 1</string>
    <string name="songListSubHeaderTemplate">Line 2</string>
    <string name="songListViewContentDescription">Song Content Description</string>
    <string name="defaultPlayerTimeStamp">00:00</string>
    <string name="fpControlButton">Control Button</string>
    <string name="skipBackwardsButton">Skip Backwards Button</string>
    <string name="skipForwardsButton">Skip Forwards Button</string>
    <string name="defaultSongArtistText">Song Artists</string>
    <string name="defaultSongTitle">Song Title</string>
    <string name="full_player_close_button">Full Player Close Button</string>
    <string name="songThumbnail">Song Thumbnail</string>
    <string name="exercisePageTitle">EXERCISE</string>
    <string name="exerciseStartButtonText">Start</string>
    <string name="exerciseInitialTimer">0:30</string>
    <string name="exerciseImageContentDescription">Exercise Image Content Description</string>
    <string name="exerciseCompletionMessage">Great Work!</string>
    <string name="getReady">"Get Ready!"</string>
    <string name="jumpingjacks">Jumping Jacks</string>
    <string name="lunges">Lunges</string>
    <string name="squats">Squats</string>
    <string name="pushups">Push Ups</string>
    <string name="buttkickers">Butt Kickers</string>
    <string name="highknees">High Knees</string>
    <string name="situps">Sit Ups</string>
    <string name="plank">Plank</string>
    <string name="burpee">Burpees</string>
    <string name="sidelunges">Side Lunges</string>
    <string name="mindfulness_activity_title">Mindfulness Activity Title</string>
    <string name="mindfulness_activity_description">Mindfulness Activity Description</string>
    <string name="mindfulnessActivityWelcomeText">Start an activity, we\'ll track your progress</string>
    <string name="mindfulnessStepTitleTemplate">Mindfulness Activity Step Title</string>
    <string name="mindfulnessStepDefaultNumber">1</string>
    <string name="mindfulnessStepTimerTemplate">0m 0s</string>
    <string name="mindfulnessSkipButtonContentDesc">Skip Step Button</string>
    <string name="mindfulnessStepDescriptionTemplate">Mindfulness activity step description</string>
    <string name="webSupportArticleContentDescription">Web Support Article Content Description</string>
    <string name="BreathingExercisesStart">Welcome to Breathing Exercises</string>
    <string name="nextBreathing">Next</string>
    <string name="startBreathing">Start</string>
    <string name="breathfocus">Focus on your Breathing</string>
    <string name="breathin">Breathe in…</string>
    <string name="breathout">Breathe out…</string>
    <string name="breathingexercisesComplete">Complete!</string>
    <string name="comfortableposition">Get into a comfortable position</string>
    <string name="imaginepeacecalm">Imagine the air is filled with a sense of peace and calm</string>
    <string name="leavestresstension">Imagine the air leaves with your stress and tension</string>
    <string name="abdomenexpanding">Notice your abdomen expanding with deep inhalations</string>
    <string name="awareofbreath">Bring awareness to your breathing</string>
    <string name="tightenmuscles">Tighten your muscles</string>
    <string name="relaxmuscles">Relax your muscles, let go of all tension</string>
    <string name="peacetranequility">Imagine peace and tranquility</string>
    <string name="letgoOfstressanxiety">Let go of stress and anxiety</string>
    <string name="feelrelaxedrejuvinated">"Hope you feel relaxed and rejuvenated"</string>
    <string name="welcomeToMoodTracker">Welcome to Mood Tracker</string>
    <string name="selectDate">Select a Date</string>
    <string name="recordMood">Record Mood</string>
    <string name="changeMood">Change Mood</string>
    <string name="recordedmood">Recorded Entry:</string>
    <string name="mood">Mood</string>
    <string name="happyMood">Happy</string>
    <string name="sadMood">Sad</string>
    <string name="relaxedMood">Relaxed</string>
    <string name="stressedMood">Stressed</string>
    <string name="angryMood">Angry</string>
    <string name="confirmMood">Confirm Mood</string>
    <string name="energy">Energy</string>
    <string name="sleepEnergy">Sleepy</string>
    <string name="lowEnergy">Low</string>
    <string name="normalEnergy">Normal</string>
    <string name="highEnergy">High</string>
    <string name="insaneEnergy">Bouncing off the walls!</string>
    <string name="confirmEnergy">Confirm Energy</string>
    <string name="social_meter">Social Meter</string>
    <string name="soloSocial">Today is a Me day</string>
    <string name="drainedSocial">Not feeling it</string>
    <string name="undecidedSocial">Undecided</string>
    <string name="socialSocial">Feeling Social</string>
    <string name="partySocial">Lets Party!</string>
    <string name="confirmSocialMeter">Confirm Social Meter</string>
    <string name="productivity">Productivity</string>
    <string name="distracted">Distracted</string>
    <string name="unproductive">Unproductive</string>
    <string name="mediocore">Mediocre</string>
    <string name="productive">Productive</string>
    <string name="accomplished">Accomplished A LOT</string>
    <string name="confirmProductivity">Confirm Productivity</string>
    <string name="connectCounsellorsContentDescription">Connect with Counsellors Content Description</string>
    <string name="connectCounsellorsInfoText">Click on the buttons below to connect with counsellors and get support</string>
    <string name="back">Back</string>
    <string name="cmha">Canadian Mental Health Association</string>
    <string name="cmhaResourceInfo">Visit www.cmha.bc.ca or call 1-800-555-8222
        for information and community resources on mental health or any mental illness.
        A free program called Bounce Back helps adults experiencing mild to moderate
        depression, stress, or anxiety, using self-help materials and coaching.</string>
    <string name="here2talk">HERE2TALK</string>
    <string name="here2talkResourceInfo">Here2Talk connects students with mental health support.
        All students currently registered in a B.C. post-secondary institution have access to free,
        confidential counselling and community referral services, conveniently available 24/7
        via app, phone and web. Call Toll Free 1.877.857.3397 or Direct 604.642.5212.
        The Here2Talk app is available for Apple and Android devices. </string>
    <string name="crisisLine">Crisis Line and Chat</string>
    <string name="crisisLineResourceInfo">BCs Distress Phone Services 1-800-784-2433 provide
        confidential, non-judgmental, free emotional support, 24 hours a day, 7 days a week,
        in over 140 languages. The Crisis Centre offers one-on-one online chat noon-1am daily
        and 24/7 access to resources through the Youth in BC program.</string>
    <string name="youthspace">YOUTHSPACE</string>
    <string name="youthspaeResourceInfo">Youthspace.ca provides emotional support and crisis
        intervention service for young people under 30. Youthspace.ca is made up of a community
        of volunteers who are here to support you - whatever you are going through.
        Chat online and text (778-783-0177) are available from 6:00pm to midnight every day. </string>
    <string name="resouce">Resource</string>
    <string name="timesUsed">Times Used</string>
    <string name="ResourceHeader">Resource:</string>
    <string name="TimesUsedHeader">Times Used:</string>
    <string name="cancelResetAllStats">Cancel Reset All Statistics</string>
    <string name="confirmResetAllStats">Confirm Reset All Statistics</string>
    <string name="resetAllStats">Reset All Statistics</string>
    <string name="meditation_routine_title">Meditation Routine Title</string>
    <string name="meditation_skip_step_button">Meditation Skip Step Button</string>
    <string name="meditation_helper_image">Meditation Helper Image</string>
    <string name="meditation_step_title">Meditation Step Title</string>
    <string name="meditation_step_description">Meditation step description</string>
    <string name="meditation_time_default">0:00</string>
</resources>