<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/DateView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="406dp"
        android:layout_height="663dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/welcomeText"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="center"
            android:text="@string/welcomeToMoodTracker"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#F3BA0F"
            android:textSize="24sp"
            android:textStyle="bold" />

        <CalendarView
            android:id="@+id/moodCalendar"
            android:layout_width="match_parent"
            android:layout_height="300dp" />

        <TextView
            android:id="@+id/selectDate"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/selectDate"
            android:textColor="#2196F3"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/recordMoodButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/recordMood"
            android:textColor="#0E32FB"
            android:textStyle="bold"
            app:backgroundTint="#B7C1F8" />

        <TextView
            android:id="@+id/savedMoodHeader"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/recordedmood"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/ViewMood"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/mood"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/ViewEnergy"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/energy"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/ViewSocialMeter"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/social_meter"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/ViewProductivity"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/productivity"
            android:textSize="24sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>