<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="386dp"
        android:layout_height="613dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/welcomeMsg"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:autofillHints="@string/app_name"
            android:background="#5C73EF"
            android:clickable="false"
            android:gravity="center"
            android:hint="@string/app_name"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/letsGetStarted"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:background="#C5B314"
            android:gravity="center"
            android:text="@string/getStarted"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <Button
            android:id="@+id/yogaButton"
            android:layout_width="388dp"
            android:layout_height="72dp"
            android:text="@string/yoga"
            app:backgroundTint="#6F66EF" />

        <Button
            android:id="@+id/playMusicButton"
            android:layout_width="388dp"
            android:layout_height="72dp"
            android:text="@string/playmusic"
            android:textColor="#FFFFFF"
            app:backgroundTint="#E8C516"
            app:layout_constraintTop_toBottomOf="@+id/welcomeMsg" />

        <Button
            android:id="@+id/moodTrackerButton"
            android:layout_width="388dp"
            android:layout_height="72dp"
            android:text="@string/moodtracker" />

        <Button
            android:id="@+id/breathingExButton"
            android:layout_width="388dp"
            android:layout_height="72dp"
            android:text="@string/breathing"
            app:backgroundTint="#D5A310" />

        <Button
            android:id="@+id/mindfulnessButton"
            android:layout_width="388dp"
            android:layout_height="72dp"
            android:text="@string/mindfulness"
            app:backgroundTint="#657AED" />

        <Button
            android:id="@+id/meditationButton"
            android:layout_width="388dp"
            android:layout_height="72dp"
            android:text="@string/meditation"
            app:backgroundTint="#EFBF2E" />

        <Button
            android:id="@+id/moreResourcesButton"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:text="@string/moreresources"
            app:backgroundTint="#3464C5" />

    </LinearLayout>

    <TextView
        android:id="@+id/favResources"
        android:layout_width="378dp"
        android:layout_height="30dp"
        android:background="#B5A51E"
        android:gravity="center"
        android:text="@string/favourites"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="375dp"
        android:layout_height="75dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>