<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="4dp"
    android:id="@+id/songCard"
    app:cardBackgroundColor="@android:color/transparent"
    app:cardCornerRadius="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="4dp">

        <ImageView
            android:id="@+id/songThumbnail"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/songListViewContentDescription"
            android:padding="2dp" />

        <TextView
            android:id="@+id/songHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="13dp"
            android:layout_marginLeft="13dp"
            android:layout_marginTop="6dp"
            android:layout_toEndOf="@+id/songThumbnail"
            android:layout_toRightOf="@+id/songThumbnail"
            android:text="@string/songListHeaderTemplate"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/songSubHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/songHeader"
            android:layout_marginStart="13dp"
            android:layout_marginLeft="13dp"
            android:layout_marginTop="3dp"
            android:layout_toEndOf="@id/songThumbnail"
            android:layout_toRightOf="@id/songThumbnail"
            android:text="@string/songListSubHeaderTemplate"
            android:textColor="@android:color/tertiary_text_light"
            android:textSize="12sp" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>