<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/breatheStateTextView"
        android:layout_width="384dp"
        android:layout_height="99dp"
        android:layout_marginTop="42dp"
        android:layout_marginBottom="590dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/BreathingExercisesStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="#03A9F4"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/breathingInstructionTextView"
        android:layout_width="389dp"
        android:layout_height="171dp"
        android:layout_marginTop="332dp"
        android:layout_marginBottom="79dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#040000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/breatheStateTextView" />

    <ImageView
        android:id="@+id/breathingImageView"
        android:layout_width="412dp"
        android:layout_height="299dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="13dp"
        app:layout_constraintBottom_toTopOf="@+id/breathingInstructionTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/breatheStateTextView"
        android:contentDescription="@string/breathingexercises" />

    <Button
        android:id="@+id/nextButton"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginBottom="16dp"
        android:text="@string/startBreathing"
        app:backgroundTint="#0C8D9E"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/breathingInstructionTextView" />
</androidx.constraintlayout.widget.ConstraintLayout>